crates/aquascope/tests/snapshots/stepper__foo@struct_with_dtor.test.snap
---
source: crates/aquascope/tests/stepper.rs
description: foo@struct_with_dtor.test
---
- - 9
  - - - s
      - is_live:
          type: High
          value: true
        type_droppable:
          type: High
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
            value: true
          write:
            type: None
            value: false
          drop:
            type: High
            value: true
    - - s.first
      - is_live:
          type: High
          value: true
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
            value: true
          write:
            type: None
            value: false
          drop:
            type: None
            value: false
    - - s.second
      - is_live:
          type: High
          value: true
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
            value: true
          write:
            type: None
            value: false
          drop:
            type: None
            value: false
- - 10
  - - - s
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low
    - - s.first
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: None
            value: false
    - - s.second
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
        path_uninitialized:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: None
            value: false

